--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,11 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/game-i/[Ll]ibrary/
+/game-i/[Tt]emp/
+/game-i/[Oo]bj/
+/game-i/[Ll]ogs/
+/game-i/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
