--- a/game-i/.vscode/settings.json
+++ b/game-i/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "WarGame.sln"
+    "dotnet.defaultSolution": "game-i.sln"
 }
